--- a/src/app/intern/components/list-questionnaires/list-questionnaires.component.html
+++ b/src/app/intern/components/list-questionnaires/list-questionnaires.component.html
@@ -4,10 +4,10 @@
   <br />
   <div class="file-dariane fw-bold">
     <p>Espace stagiaire > questionnaires</p>
+    <h2 class="text-center">Bienvenue {{intern.firstname}}</h2>
   </div>
   <!-- <app-file-dariane link="['/intern']" names="['Stagiaire']"></app-file-dariane> -->
   <hr>
-
   <h2 class="text-center">Liste des questionnaires disponibles</h2>
   <br />
 
