--- a/src/app/intern/components/question-progress/question-progress.component.html
+++ b/src/app/intern/components/question-progress/question-progress.component.html
@@ -52,7 +52,7 @@
       type="button"
       *ngIf="lisQuestions?.numberOfQuestionsLeft === 1"
       (click)="onSaveForm()"
-      [routerLink]="['/intern/listQuestions/questions/resultats/', questionId]"
+      [routerLink]="['/intern/listQuestions/questions/resultats/', idProgress]"
       type="submit"
       class="btn btn-danger mx-1 my-2"
     >
