--- a/src/app/intern/components/resultats/resultats.component.html
+++ b/src/app/intern/components/resultats/resultats.component.html
@@ -5,7 +5,7 @@
 <div *ngIf="scoreTotal >= 70" class="d-flex justify-content-center align-items-center">
 
   <div class="container justify-content-center align-items-center">
-    <p class="my-5">Bravo vous ave réussi le test avec un score de:</p>
+    <p class="my-5">Bravo vous avez réussi le test avec un score de:</p>
     <h1 class="my-5 pctv">{{scoreTotal | number: '1.0-2'}}%</h1>
   </div>
 
