fix starting logs showing a warning/error

--- a/src/app/intern/components/question-progress/question-progress.component.html
+++ b/src/app/intern/components/question-progress/question-progress.component.html
@@ -8,7 +8,7 @@
 <hr />
 <div class="container" *ngIf="checkForm">
   <div class="intitule">
-    <h3>{{ lisQuestions?.wording }}</h3>
+    <h3>{{ lisQuestions.wording }}</h3>
   </div>
   <div *ngIf="checkForm" class="container">
     <!-- Progress bar -->
